--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/russoturisto/QueryDSL-TypeScript#readme",
   "dependencies": {
+    "es6-shim": "^0.35.0",
     "immutable": "^3.7.6"
   }
 }
