Compilation fixes and distribution setup

--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "dependencies": {
     "es6-shim": "^0.35.0",
     "immutable": "^3.7.6"
-  }
+  },
+  "devDependencies": {
+    "typescript": "^1.8.10"
+  },
+  "main": "lib/index.js",
+  "typings": "lib/index"
 }
