--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "querydsl-typescript",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "QueryDSL for TypeScript",
-  "main": "index.js",
+  "main": "lib/index.js",
   "typings": "lib/index",
   "dependencies": {
     "es6-shim": "^0.35.0",
