--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^1.8.10"
   },
   "scripts": {
+    "postinstall": "typings install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
