--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.8.9",
+  "version": "1.8.10",
   "compileOnSave": true,
   "compilerOptions": {
     "declaration": true,
@@ -18,6 +18,7 @@
     "node_modules",
     "QdTs-PH",
     "querydsl-core",
-    "typings"
+    "typings/main",
+    "typings/main.d.ts"
   ]
 }
